@@ -1,3 +1,8 @@
+2005-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/fs-ecos.c (jffs2_truncate_file): Correctly truncate a file
+	when opening it with O_TRUNC. Test case from Knud Woehler.
+
 2005-02-08  Estelle HAMMACHE <estelle.hammache@st.com>
 
 	* src/fs-ecos.c 
